# MovieGraph

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: run_etl.yml
app/: engine.py  examples.py  main.py  prompts.py  routes.py
etl/data/sources/: oscars_normalized.csv  ratings.csv  trending.csv  watchlists.csv
etl/data/sources/users/: blacklists.csv  diary.csv  trending.csv
etl/dummy_data/sources/: oscars_filtered_by_movies.csv  ratings_filtered_by_movies.csv  trending.csv  watchlists_filtered_by_movies.csv
etl/dummy_data/sources/users/: blacklists.csv  ratings.csv  ratings_filtered_by_movies.csv  users.csv  watchlists.csv
etl/ontology/: mappings.yaml  ontology.yaml  sources.yaml  sources_dummy.yaml
etl/ontology/docs/: ontology.md
etl/scripts/: build_graph.py  generate_docs.py  run_etl.py  update_sources.py
etl/scripts/scrapers/: filter_dummy_data.py  scrape_movies.py  scrape_persons.py
etl/src/: dataclass.py  ontology_etl.py  postprocessors.py  transforms.py
etl/src/clients/: letterboxd_client.py  neo4j_io.py  recommender.py  sql_client.py
ui/: styles.css
ui-catalogue/: app.js  index.html  styles.css
ui-old/: app.js  index.html
